# pydel-msh

./: .gitignore  Cargo.toml  README.ipynb  README.md  pyproject.toml
.github/workflows/: Deploy.yml  Test.yml
del_msh/: BVH.py  DeformMLS.py  KdTree.py  PolyLoop.py  PolygonMesh.py  TriMesh.py  WavefrontObj.py  __init__.py
src/: bvh.rs  dijkstra.rs  dtri.rs  edge2vtx.rs  elem2elem.rs  extract.rs  gradient_distance_extension.rs  io.rs  io_obj.rs  kdtree.rs  lib.rs  mesh_intersection.rs  mesh_laplacian.rs  polyloop.rs  primitive.rs  sampling.rs  topology.rs  trimesh3_search.rs  unify_index.rs  unindex.rs  vtx2area.rs
tests/: test_bvh.py  test_polyloop.py  test_tesselation2d.py  test_trimesh.py
