[package]
name = "pydel-msh"
version = "0.1.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_msh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
nalgebra = "0.32.3"
numpy = "0.20.0"
# del-msh = {path="../del-msh"}
del-msh = "0.1.17"

# del-geo = {path="../del-geo"}
del-geo = "0.1.9"

# del-dtri = {path="../del-dtri"}
del-dtri = "0.1.3"