[package]
name = "pydel-msh"
version = "0.1.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_msh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
nalgebra = "0.32.3"
numpy = "0.20.0"
num-traits = "0.2.18"


# del-msh = {path="../del-msh"}
# del-geo = {path="../del-geo"}
# del-dtri = {path="../del-dtri"}
del-msh = "0.1.25"
del-geo = "0.1.18"
del-dtri = "0.1.3"